fix(periodic_table): make ellipsis text overflow work

--- a/src/modules/types/science/chemistry/periodic_table/style.css
+++ b/src/modules/types/science/chemistry/periodic_table/style.css
@@ -136,6 +136,7 @@
 .element-data {
     flex:4;
     text-align: center;
+    width: 100%;
 }
 .element-data .Z {
     text-align: left;
